Fix point calculator